[Refactor] strict mode on SecuritySchemeDeSerializer
